--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
     <link rel="stylesheet" href="css/diseño.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Servicios Unared</title>
-    <script type="text/javascript">
-        function sendMail(){
-            var pormensaje = document.getElementsByName("mensaje")[0].value;
-            window.open('mailto:ccampos.geminis@gmail.com?subject=Contacto web');
-        }
-    </script>
 </head>
 <body>
     <header>
@@ -36,7 +30,7 @@
         <section class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto">
-                    <img src="img/foto.jpg" width="115" height="115" alt="Carlos Campos">
+                    <img src="img/foto.jpg" width="115" height="115" alt="Cesar R. Peña Arias">
                 </div>
                 <div class="texto">
                     <h3 class="titulo">Acerca de</h3>
