--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="js/javascript.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Servicios Unared</title>
+    <meta name="description" content="Servicios de Construcción en general, instalaciones eléctricas industriales y domiciliarias instalación de telecomunicaciones, gasfitería en general y construcciones metálicas en genera ">
+    <meta name="keywords" content="Instalaciones eléctricas, Construcción, Carpintería, instalación de cerámicos, Gasfitería, agua, gas, construcciones metálicas, metal, citofonía, redes de dato, circuito cerrado de televisión, instalación eléctrica, industrial, domiciliarias, Araucanía">
+    <meta name="author" content="Carlos Campos Fuentes">
 </head>
 <body>
     <header>
@@ -36,7 +39,7 @@
                 </div>
                 <div class="texto">
                     <h3 class="titulo">Acerca de</h3>
-                    <p>Somos una empresa de <span class="bold">servicios generales</span>, orientada a dar soluciones a empresas y particulares. Nuestro trabajo se caracteriza, por ser un trabajo personalizado y comprometido</p>
+                    <p>Empresa de <span class="bold">instalación electica, gasfitería, construcción, electricidad, estructuras metálicas y automatización</span> que se enfoca a dar soluciones a empresas y particulares en el sector de la <span class="bold">Araucanía</span>. Nos caracterizamos por un servicio personalizado y comprometidos con nuestros clientes </p>
                 </div>
             </div>
         </section>
