--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="js/javascript.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Servicios Unared</title>
-    <meta name="description" content="Servicios de Construcción en general, instalaciones eléctricas industriales y domiciliarias instalación de telecomunicaciones, gasfitería en general y construcciones metálicas en genera ">
-    <meta name="keywords" content="Instalaciones eléctricas, Construcción, Carpintería, instalación de cerámicos, Gasfitería, agua, gas, construcciones metálicas, metal, citofonía, redes de dato, circuito cerrado de televisión, instalación eléctrica, industrial, domiciliarias, Araucanía">
+    <meta name="description" content="Unared Servicios de Construcción en general, instalaciones eléctricas industriales y domiciliarias instalación de telecomunicaciones, gasfitería en general y construcciones metálicas en genera ">
+    <meta name="keywords" content="soldador,Araucania,chile,unared,Instalaciones eléctricas, Construcción, Carpintería, instalación de cerámicos, Gasfitería, agua, gas, construcciones metálicas, metal, citofonía, redes de dato, circuito cerrado de televisión, instalación eléctrica, industrial, domiciliarias, Araucanía">
     <meta name="author" content="Carlos Campos Fuentes">
 </head>
 <body>
